# python-pdf-to-audio-app

./: README.md  main.py  pyproject.toml
src/: main.py
typings/gtts/: cli.pyi  lang.pyi  tts.pyi
typings/gtts/tokenizer/: core.pyi  pre_processors.pyi  tokenizer_cases.pyi
