[tool.poetry]
name = "pdf-to-audio-app"
version = "0.1.0"
description = "This is a simple app that converts pdf to audio"
authors = ["IBK <ibukunoluwa.adetoba@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
PyPDF2 = "^3.0.1"
gtts = "^2.5.3"
playsound = "1.2.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
black = "^24.8.0"
pylint = "^3.2.7"
types-playsound = "^1.3.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true

[tool.pylint.MASTER]
disable = ["C0114", "C0301"]
ignore-paths = ["^typings/.*$"]

[tool.black]
line-length = 120
